--- a/css/basic.css
+++ b/css/basic.css
@@ -28,18 +28,22 @@ body {
   font-weight: 400;
   color: rgba(0, 0, 0, 0.45);
 }
+.header-container .main-title {
+  font-size: 48px;
+  font-weight: 800;
+}
 
 .section {
   height: calc(100svh - 145px);
   box-sizing: border-box;
 }
 
-#view-section {
+#list-view {
   display: flex;
   flex-direction: column;
   border: 3px solid rgba(240, 78, 35, 0.45);
 }
-#view-section .table-header {
+#list-view .table-header {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 270px;
   border-bottom: 2px solid rgba(240, 78, 35, 0.15);
@@ -47,22 +51,22 @@ body {
   font-weight: 500;
   background-color: rgba(240, 78, 35, 0.15);
 }
-#view-section .table-header li {
+#list-view .table-header li {
   padding: 15px;
   display: flex;
   align-items: center;
   justify-content: center;
   border-right: 1px solid rgba(0, 0, 0, 0.1);
 }
-#view-section .table-header li:last-child {
+#list-view .table-header li:last-child {
   border-right: none;
 }
-#view-section #view-container {
+#list-view #view-container {
   display: flex;
   flex-direction: column;
   height: 100%;
 }
-#view-section #view-container .table-content {
+#list-view #view-container .table-content {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 270px;
   height: 100%;
@@ -70,10 +74,10 @@ body {
   font-size: 24px;
   font-weight: 500;
 }
-#view-section #view-container .table-content:last-child {
+#list-view #view-container .table-content:last-child {
   border-bottom: none;
 }
-#view-section #view-container .table-content li {
+#list-view #view-container .table-content li {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -81,58 +85,54 @@ body {
   min-width: 0;
   padding: 0 15px;
 }
-#view-section #view-container .table-content li span {
+#list-view #view-container .table-content li span {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
 }
-#view-section #view-container .table-content li:first-child {
+#list-view #view-container .table-content li:first-child {
   background-color: rgba(240, 78, 35, 0.05);
 }
-#view-section #view-container .table-content li:last-child {
+#list-view #view-container .table-content li:last-child {
   border-right: none;
 }
 
-#list-section {
+.settings-table#settings {
   display: flex;
   flex-direction: column;
   border: 3px solid rgba(153, 202, 59, 0.45);
 }
-#list-section .table-header {
+.settings-table#settings .table-header {
   display: grid;
-  grid-template-columns: 60px 1fr 1fr 1fr 195px 210px;
+  grid-template-columns: 75px 1fr 1fr 1fr 195px 210px;
   border-bottom: 2px solid rgba(153, 202, 59, 0.15);
   font-size: 18px;
   font-weight: 500;
   background-color: rgba(153, 202, 59, 0.15);
 }
-#list-section .table-header li {
+.settings-table#settings .table-header li {
   padding: 15px;
   display: flex;
   align-items: center;
   justify-content: center;
   border-right: 1px solid rgba(0, 0, 0, 0.1);
 }
-#list-section .table-header li:last-child {
+.settings-table#settings .table-header li:last-child {
   border-right: none;
 }
-#list-section #list-container {
+.settings-table#settings #list-container {
   height: 100%;
   display: grid;
   grid-template-rows: repeat(10, 1fr);
 }
-#list-section #list-container .table-content {
+.settings-table#settings #list-container .table-content {
   display: grid;
-  grid-template-columns: 60px 1fr 1fr 1fr 195px 210px;
+  grid-template-columns: 75px 1fr 1fr 1fr 195px 210px;
   height: 100%;
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
   font-size: 16.5px;
 }
-#list-section #list-container .table-content.selected {
-  outline: 5px solid rgb(153, 202, 59);
-  outline-offset: -3px;
-}
-#list-section #list-container .table-content li {
+.settings-table#settings #list-container .table-content li {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -140,26 +140,16 @@ body {
   min-width: 0;
   padding: 0 15px;
 }
-#list-section #list-container .table-content li span {
+.settings-table#settings #list-container .table-content li span {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
 }
-#list-section #list-container .table-content li:first-child {
-  background-color: rgba(153, 202, 59, 0.05);
-}
-#list-section #list-container .table-content li:first-child input {
-  cursor: pointer;
-  height: 30px;
-  width: 30px;
-  margin: 0;
-  padding: 0;
-}
-#list-section #list-container .table-content li:last-child {
+.settings-table#settings #list-container .table-content li:last-child {
   border-right: none;
   gap: 15px;
 }
-#list-section #list-container .table-content li:last-child .btn-modify, #list-section #list-container .table-content li:last-child .btn-delete {
+.settings-table#settings #list-container .table-content li:last-child .btn-modify, .settings-table#settings #list-container .table-content li:last-child .btn-delete {
   cursor: pointer;
   height: 30px;
   width: 90px;
@@ -169,36 +159,96 @@ body {
   font-weight: 500;
   color: rgb(255, 255, 255);
 }
-#list-section #list-container .table-content li:last-child .btn-modify:disabled, #list-section #list-container .table-content li:last-child .btn-delete:disabled {
-  opacity: 0.3;
-  cursor: not-allowed;
-}
-#list-section #list-container .table-content li:last-child .btn-modify {
+.settings-table#settings #list-container .table-content li:last-child .btn-modify {
   background-color: rgb(153, 202, 59);
 }
-#list-section #list-container .table-content li:last-child .btn-delete {
+.settings-table#settings #list-container .table-content li:last-child .btn-delete {
   background-color: rgb(240, 78, 35);
 }
+.settings-table#order-edit {
+  display: flex;
+  flex-direction: column;
+  border: 3px solid rgba(153, 202, 59, 0.45);
+}
+.settings-table#order-edit .table-header {
+  display: grid;
+  grid-template-columns: 60px 120px 1fr 1fr 1fr 195px;
+  border-bottom: 2px solid rgba(153, 202, 59, 0.15);
+  font-size: 18px;
+  font-weight: 500;
+  background-color: rgba(153, 202, 59, 0.15);
+}
+.settings-table#order-edit .table-header li {
+  padding: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-right: 1px solid rgba(0, 0, 0, 0.1);
+}
+.settings-table#order-edit .table-header li:last-child {
+  border-right: none;
+}
+.settings-table#order-edit #order-edit-container {
+  height: 100%;
+  display: grid;
+  grid-template-rows: repeat(10, 1fr);
+}
+.settings-table#order-edit #order-edit-container .table-content {
+  display: grid;
+  grid-template-columns: 60px 120px 1fr 1fr 1fr 195px;
+  height: 100%;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+  font-size: 16.5px;
+}
+.settings-table#order-edit #order-edit-container .table-content.selected {
+  outline: 5px solid rgb(153, 202, 59);
+  outline-offset: -3px;
+}
+.settings-table#order-edit #order-edit-container .table-content li {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-right: 1px solid rgba(0, 0, 0, 0.1);
+  min-width: 0;
+  padding: 0 15px;
+}
+.settings-table#order-edit #order-edit-container .table-content li span {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.settings-table#order-edit #order-edit-container .table-content li:first-child {
+  background-color: rgba(153, 202, 59, 0.05);
+}
+.settings-table#order-edit #order-edit-container .table-content li:first-child input {
+  cursor: pointer;
+  height: 30px;
+  width: 30px;
+  margin: 0;
+  padding: 0;
+}
 
-#edit-section {
+#slide-edit {
   padding: 45px;
   border: 3px solid rgba(153, 202, 59, 0.45);
 }
-#edit-section .input-group {
+#slide-edit .input-group {
   display: grid;
   -moz-column-gap: 75px;
        column-gap: 75px;
   row-gap: 45px;
   grid-template-columns: repeat(4, 1fr);
   width: 100%;
+  height: -moz-fit-content;
+  height: fit-content;
 }
-#edit-section .input-group .input-container .label {
+#slide-edit .input-group .input-container .label {
   margin-bottom: 9px;
   font-size: 18px;
   font-weight: 500;
   color: rgb(0, 0, 0);
 }
-#edit-section .input-group .input-container input {
+#slide-edit .input-group .input-container input {
   box-sizing: border-box;
   font-family: "Pretendard", sans-serif;
   width: 100%;
@@ -210,30 +260,30 @@ body {
   font-weight: 400;
   background-color: rgb(255, 255, 255);
 }
-#edit-section .input-group .input-container input::-moz-placeholder {
+#slide-edit .input-group .input-container input::-moz-placeholder {
   color: rgba(0, 0, 0, 0.3);
 }
-#edit-section .input-group .input-container input::placeholder {
+#slide-edit .input-group .input-container input::placeholder {
   color: rgba(0, 0, 0, 0.3);
 }
-#edit-section .input-group .input-container:nth-child(1) {
+#slide-edit .input-group .input-container:nth-child(1) {
   grid-column: 1/3;
   grid-row: 1/2;
 }
-#edit-section .input-group .input-container:nth-child(2) {
+#slide-edit .input-group .input-container:nth-child(2) {
   grid-column: 3/5;
   grid-row: 1/2;
 }
-#edit-section .input-group .input-container:nth-child(3) {
+#slide-edit .input-group .input-container:nth-child(3) {
   grid-column: 1/3;
   grid-row: 2/3;
 }
-#edit-section .input-group .input-container:nth-child(4) {
+#slide-edit .input-group .input-container:nth-child(4) {
   grid-column: 3/4;
   grid-row: 2/3;
   margin-right: -24px;
 }
-#edit-section .input-group .input-container:nth-child(5) {
+#slide-edit .input-group .input-container:nth-child(5) {
   grid-column: 4/5;
   grid-row: 2/3;
   margin-left: -24px;
@@ -278,4 +328,8 @@ body {
   border: 3px solid rgb(153, 202, 59);
   background-color: rgb(255, 255, 255);
   color: rgb(153, 202, 59);
+}
+
+.hide {
+  display: none;
 }/*# sourceMappingURL=basic.css.map */
