--- a/css/basic.scss
+++ b/css/basic.scss
@@ -1,17 +1,34 @@
-$fs-main-title: 48px; // Date 폰트 사이즈
-$fw-main-title: 800; // Date 폰트 웨이트
+$fs-main-title: 48px; // Main Title 폰트 사이즈
+$fw-main-title: 800; // Main Title 폰트 웨이트
 
-$fs-v1: 24px; // List View 폰트 사이즈
-$fw-v1: 500; // List View 폰트 웨이트
+$fs-slide-label: 24px; // Slide View Label 폰트 사이즈
+$fw-slide-label: 400; // Slide View Label 폰트 웨이트
 
-$fs-edit-label: 18px; // Input 라벨 폰트 사이즈
-$fw-edit-label1: 500; // Input 라벨 폰트 웨이트
+$fs-slide-content: 54px; // Slide View Content 폰트 사이즈
+$fw-slide-content: 600; // Slide View Content 폰트 웨이트
 
-$fs-edit-input1: 21px; // Input 폰트 사이즈
-$fw-edit-input1: 400; // Input 폰트 웨이트
+$fs-list-title: 18px; // List View Title 폰트 사이즈
+$fw-list-title: 500; // List View Title 폰트 웨이트
 
-$fs-date1: 18px; // Date 폰트 사이즈
-$fw-date1: 400; // Date 폰트 웨이트
+$fs-list-content: 24px; // List View Content 폰트 사이즈
+$fw-list-content: 600; // List View Content 폰트 웨이트
+
+$fs-settings-title: 18px; // Settings View Title 폰트 사이즈
+$fw-settings-title: 500; // Settings View Title 폰트 웨이트
+
+$fs-settings-content: 16.5px; // Settings View Content 폰트 사이즈
+$fw-settings-content: 500; // Settings View Content 폰트 웨이트
+
+$fs-edit-label: 18px; // Input Label 폰트 사이즈
+$fw-edit-label: 500; // Input Label 폰트 웨이트
+
+$fs-edit-input: 21px; // Input 폰트 사이즈
+$fw-edit-input: 400; // Input 폰트 웨이트
+
+$fs-date: 18px; // Date 폰트 사이즈
+$fw-date: 400; // Date 폰트 웨이트
+$lh-date: 24px; // Date Line Height
+
 
 $main-height: calc(100svh - 145px);
 
@@ -74,8 +91,9 @@ body {
       height: 45px; width: auto;
     }
     .date {
-      font-size: $fs-date1;
-      font-weight: $fw-date1;
+      font-size: $fs-date;
+      font-weight: $fw-date;
+      line-height: $lh-date;
       color: $color-k5;
     }
   }
@@ -91,13 +109,59 @@ body {
   box-sizing: border-box;
 }
 
+#slide-view {
+  position: relative;
+  display: flex;
+  padding: 45px;
+  border: 3px solid $color-r6;
+  .slide {
+    display: flex; flex-direction: column; justify-content: space-between;
+    .slide-content {
+      .label {
+        margin-bottom: 6px;
+        font-size: $fs-slide-label;
+        font-weight: $fw-slide-label;
+        color: $color-r3;
+      }
+      .content {
+        font-size: $fs-slide-content;
+        font-weight: $fw-slide-content;
+      }
+    }
+  }
+  .slider-controls {
+    position: absolute; bottom: 45px; right: 45px;
+    display: flex; align-items: center; gap: 12px;
+    opacity: 0.6;
+    button {
+      cursor: pointer;
+      display: flex; align-items: center; justify-content: center;
+      height: 45px; width: 45px;
+      border: 2px solid $color-r1;
+      border-radius: 9px;
+      background-color: $color-w1;
+      font-size: 30px;
+      color: $color-r1;
+      img {
+        width: 24px; height: 24px;
+      }
+    }
+    #slide-counter {
+      width: 66px;
+      font-size: 21px;
+      text-align: center;
+      color: $color-r1;
+    }
+  }
+}
+
 #list-view {
   display: flex; flex-direction: column;
-  border: 3px solid $color-r5;
+  border: 3px solid $color-r6;
   .table-header {
-    display: grid; grid-template-columns: 1fr 1fr 1fr 270px;
+    display: grid; grid-template-columns: 1fr 1fr 1fr 285px;
     border-bottom: 2px solid $color-r7;
-    font-size: 18px; font-weight: 500;
+    font-size: $fs-list-title; font-weight: $fw-list-title;
     background-color: $color-r7;
     li {
       padding: 15px;
@@ -109,14 +173,14 @@ body {
     }
   }
 
-  #view-container {
+  #list-view-container {
     display: flex; flex-direction: column;
     height: 100%;
     .table-content {
-      display: grid; grid-template-columns: 1fr 1fr 1fr 270px;
+      display: grid; grid-template-columns: 1fr 1fr 1fr 285px;
       height: 100%;
       border-bottom: 1px solid $color-k8;
-      font-size: $fs-v1; font-weight: $fw-v1;
+      font-size: $fs-list-content; font-weight: $fw-list-content;
       &:last-child {
         border-bottom: none;
       }
@@ -142,48 +206,57 @@ body {
 }
 
 .settings-table {
-  &#settings {
-    display: flex; flex-direction: column;
-    border: 3px solid $color-g5;
-    .table-header {
-      display: grid; grid-template-columns: 75px 1fr 1fr 1fr 195px 210px;
-      border-bottom: 2px solid $color-g7;
-      font-size: 18px; font-weight: 500;
-      background-color: $color-g7;
+  display: flex; flex-direction: column;
+  border: 3px solid $color-g5;
+  .table-header {
+    border-bottom: 2px solid $color-g7;
+    font-size: $fs-settings-title; font-weight: $fw-settings-title;
+    background-color: $color-g7;
+    li {
+      padding: 15px;
+      display: flex; align-items: center; justify-content: center;
+      border-right: 1px solid $color-k8;
+      &:last-child {
+        border-right: none;
+      }
+    }
+  }
+  .table-container {
+    height: 100%;
+    display: grid; grid-template-rows: repeat(10, 1fr);
+    .table-content {
+      height: 100%;
+      border-bottom: 1px solid $color-k8;
+      font-size: $fs-settings-content; font-weight: $fw-settings-content;
       li {
-        padding: 15px;
         display: flex; align-items: center; justify-content: center;
         border-right: 1px solid $color-k8;
+        min-width: 0; // flex 아이템이 콘텐츠 크기보다 작아질 수 있도록 허용.  이렇게 해야 말줄임표 적용 가능
+        padding: 0 15px;
+        span {
+          white-space: nowrap;
+          overflow: hidden;
+          text-overflow: ellipsis;
+        }
         &:last-child {
           border-right: none;
         }
       }
     }
-    #list-container {
-      height: 100%;
-      display: grid; grid-template-rows: repeat(10, 1fr);
-
+  }
+  &#settings {
+    .table-header {
+      display: grid; grid-template-columns: 75px 1fr 1fr 1fr 195px 225px;
+    }
+    #settings-container {
       .table-content {
-        display: grid; grid-template-columns: 75px 1fr 1fr 1fr 195px 210px;
-        height: 100%;
-        border-bottom: 1px solid $color-k8;
-        font-size: 16.5px;
+        display: grid; grid-template-columns: 75px 1fr 1fr 1fr 195px 225px;
         li {
-          display: flex; align-items: center; justify-content: center;
-          border-right: 1px solid $color-k8;
-          min-width: 0; // flex 아이템이 콘텐츠 크기보다 작아질 수 있도록 허용.  이렇게 해야 말줄임표 적용 가능
-          padding: 0 15px;
-          span {
-            white-space: nowrap;
-            overflow: hidden;
-            text-overflow: ellipsis;
-          }
           &:last-child {
-            border-right: none;
-            gap: 15px;
+            gap: 21px;
             .btn-modify, .btn-delete {
               cursor: pointer;
-              height: 30px; width: 90px;
+              height: 30px; width: 81px;
               border: 0; border-radius: 3px;
               font-size: 18px; font-weight: 500;
               color: $color-w1;
@@ -196,45 +269,17 @@ body {
     }
   }
   &#order-edit {
-    display: flex; flex-direction: column;
-    border: 3px solid $color-g5;
     .table-header {
       display: grid; grid-template-columns: 60px 120px 1fr 1fr 1fr 195px;
-      border-bottom: 2px solid $color-g7;
-      font-size: 18px; font-weight: 500;
-      background-color: $color-g7;
-      li {
-        padding: 15px;
-        display: flex; align-items: center; justify-content: center;
-        border-right: 1px solid $color-k8;
-        &:last-child {
-          border-right: none;
-        }
-      }
     }
     #order-edit-container {
-      height: 100%;
-      display: grid; grid-template-rows: repeat(10, 1fr);
-
       .table-content {
+        display: grid; grid-template-columns: 60px 120px 1fr 1fr 1fr 195px;
         &.selected {
           outline: 5px solid $color-g1;
           outline-offset: -3px;
         }
-        display: grid; grid-template-columns: 60px 120px 1fr 1fr 1fr 195px;
-        height: 100%;
-        border-bottom: 1px solid $color-k8;
-        font-size: 16.5px;
         li {
-          display: flex; align-items: center; justify-content: center;
-          border-right: 1px solid $color-k8;
-          min-width: 0; // flex 아이템이 콘텐츠 크기보다 작아질 수 있도록 허용.  이렇게 해야 말줄임표 적용 가능
-          padding: 0 15px;
-          span {
-            white-space: nowrap;
-            overflow: hidden;
-            text-overflow: ellipsis;
-          }
           &:first-child {
             background-color: $color-g9;
             input {
@@ -262,7 +307,7 @@ body {
       .label {
         margin-bottom: 9px;
         font-size: $fs-edit-label;
-        font-weight: $fw-edit-label1;
+        font-weight: $fw-edit-label;
         color: $color-k1;
       }
       input {
@@ -273,8 +318,8 @@ body {
         padding: 12px 15px;
         border: 1px solid $color-k6;
         border-radius: 6px;
-        font-size: $fs-edit-input1;
-        font-weight: $fw-edit-input1;
+        font-size: $fs-edit-input;
+        font-weight: $fw-edit-input;
         background-color: $color-w1;
         &::placeholder {
           color: $color-k6;
