--- a/css/basic.css
+++ b/css/basic.css
@@ -50,6 +50,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  width: 100%;
 }
 #slide-view .slide .slide-content .label {
   margin-bottom: 6px;
@@ -60,6 +61,9 @@ body {
 #slide-view .slide .slide-content .content {
   font-size: 54px;
   font-weight: 600;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 #slide-view .slider-controls {
   position: absolute;
@@ -278,9 +282,10 @@ body {
 #slide-edit .input-group .input-container input {
   box-sizing: border-box;
   font-family: "Pretendard", sans-serif;
+  height: 57px;
   width: 100%;
+  padding: 15px;
   margin: 0;
-  padding: 12px 15px;
   border: 1px solid rgba(0, 0, 0, 0.3);
   border-radius: 6px;
   font-size: 21px;
