--- a/css/basic.scss
+++ b/css/basic.scss
@@ -117,6 +117,7 @@ body {
   border: 3px solid $color-r6;
   .slide {
     display: flex; flex-direction: column; justify-content: space-between;
+    width: 100%; // 말줄임표 구현을 위해 필요
     .slide-content {
       .label {
         margin-bottom: 6px;
@@ -127,6 +128,9 @@ body {
       .content {
         font-size: $fs-slide-content;
         font-weight: $fw-slide-content;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
       }
     }
   }
@@ -318,9 +322,8 @@ body {
       input {
         box-sizing: border-box;
         font-family: 'Pretendard', sans-serif;
-        width: 100%;
-        margin: 0;
-        padding: 12px 15px;
+        height: 57px; width: 100%;
+        padding: 15px; margin: 0;
         border: 1px solid $color-k6;
         border-radius: 6px;
         font-size: $fs-edit-input;
