--- a/css/basic.css
+++ b/css/basic.css
@@ -1,6 +1,6 @@
 body {
   font-family: "Pretendard", sans-serif;
-  padding: 30px;
+  padding: 54px 30px;
   -webkit-user-select: none;
      -moz-user-select: none;
           user-select: none;
@@ -35,7 +35,7 @@ body {
 }
 
 .section {
-  height: calc(100svh - 145px);
+  height: calc(100svh - 190px);
   box-sizing: border-box;
   border-radius: 15px;
 }
@@ -43,7 +43,7 @@ body {
 #slide-view {
   position: relative;
   display: flex;
-  padding: 45px;
+  padding: 45px 45px 39px 45px;
   border: 3px solid rgba(240, 78, 35, 0.3);
 }
 #slide-view .slide {
@@ -53,7 +53,7 @@ body {
   width: 100%;
 }
 #slide-view .slide .slide-content .label {
-  margin-bottom: 6px;
+  margin-bottom: 7.5px;
   font-size: 24px;
   font-weight: 400;
   color: rgba(240, 78, 35, 0.75);
@@ -61,6 +61,7 @@ body {
 #slide-view .slide .slide-content .content {
   font-size: 54px;
   font-weight: 600;
+  line-height: 63.5px;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
